--- a/config.yml
+++ b/config.yml
@@ -1,37 +1,65 @@
 swipe:
-  3: 
-    left: 
-      command: 'xdotool key Alt_L+Tab'
-    right: 
-      command: 'xdotool key Shift_L+Alt_L+Tab'
-    up: 
-      command: 'xdotool key Control_L+F10'
-      threshold: 0.75
-    down: 
-      command: 'xdotool key Control_L+F12'
-      threshold: 0.75
+  3:
+    left:
+      command: 'xdotool key alt+Right' # History forward
+    right:
+      command: 'xdotool key alt+Left' # History back
+    up:
+      command: 'xdotool key ctrl+t' # Open new tab
+      keypress:
+        LEFTSHIFT:
+          command: 'xdotool key --clearmodifiers ctrl+shift+t' # Open last closed tab
+    down:
+      command: 'xdotool key ctrl+w' # Close tab
   4:
-    up: 
-      command: 'xdotool key Alt_LL+Left'
-    down: 
-      command: 'xdotool key Alt_L+Right'
-    right: 
-      command: 'xdotool key Control_L+Tab'
-    left: 
-      command: 'xdotool key Control_L+Shift_L+Tab'
+    left:
+      workspace: 'next' # Switch to next workspace
+      keypress:
+        LEFTSHIFT: 
+          window: 'next' # Move window to next workspace
+        LEFTMETA:
+          command: 'xdotool key --clearmodifiers super+ctrl+Left' # Move window to left side
+    right:
+      workspace: 'prev' # Switch to previous workspace
+      keypress:
+        LEFTSHIFT: 
+          window: 'prev' # Move window to previous workspace
+        LEFTMETA:
+          command: 'xdotool key --clearmodifiers super+ctrl+Right'  # Move window to right side
+    up:
+      command: 'xdotool key Control_L+F10' # Workspace overview
+      keypress:
+        LEFTMETA:
+          window:
+            maximized: 'toggle' # Toggle Maximize/Unmaximize Window
+    down:
+      command: 'xdotool key Shift_L+Alt_L+Tab' #aaaaa
+      keypress:
+        LEFTMETA:
+          window: 'close' # Close window
+
 pinch:
   2:
     in:
-      command: 'xdotool key Control_L+plus'
-      threshold: 0.1
+      command: 'xdotool keydown ctrl click 4 keyup ctrl' # Zoom in
     out:
-      command: 'xdotool key Control_L+minus'
-      threshold: 0.1
+      command: 'xdotool keydown ctrl click 5 keyup ctrl' # Zoom out
+  4:
+    in:
+      command: 'xdotool key super+a' # Window overview
+    out:
+      command: 'xdotool key super+s' # Workspace overview
 
-threshold:
-  swipe: 0.75
-  pinch: 0.75
+rotate:
+  3:
+    clockwise:
+      command: 'xdotool key XF86MonBrightnessUp' # Brightness up
+    counterclockwise:
+      command: 'xdotool key XF86MonBrightnessDown' # Brightness down
 
-interval:
-  swipe: 1
-  pinch: 1
+plugin: 
+  inputs:
+    libinput_command_input: # options for lib/plugin/inputs/libinput_command_input
+      enable-tap: true # click to tap
+      enable-dwt: true # disable tap while typing
+      show-keycodes: true # https://github.com/iberianpig/fusuma-plugin-keypress#add-show-keycode-option
